Working split shuffle and join

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <div id="btn-group">
     <button id="shuffleCards">Shuffle All</button>
     <button id="splitDeck">Split Deck</button>
+    <button id="left-Shuffle" style="visibility: hidden;">Shuffle Left</button>
+    <button id="right-Shuffle" style="visibility: hidden;">Shuffle Right</button>
   </div>
   <div id="card-display">
+    <div id = "Left"></div>
+    <div id = "Right" class="card-grid"></div>
   </div>
 </body>
 
